# pecunio

./: Cargo.toml  LICENSE  NOTES.md  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/application/: error.rs  mod.rs  reporting.rs  service.rs
src/cli/: mod.rs
src/domain/: budget.rs  ledger.rs  mod.rs  money.rs  scheduled_transfer.rs  transfer.rs  wallet.rs
src/io/: export.rs  import.rs  mod.rs
src/storage/: mod.rs  repository.rs
src/storage/migrations/: 001_initial.sql  002_budgets.sql  003_scheduled_transfers.sql  004_reporting_indexes.sql
tests/: budgets_test.rs  forecasting_test.rs  integration_test.rs  phase4_integration_test.rs  phase5_reporting_test.rs  reporting_test.rs  scheduled_test.rs  transfers_test.rs
tests/common/: mod.rs
