[package]
name = "pecunio"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
